SERVER-26492 Stop geoNear density estimator once it exceeds maxDistance